--- a/css/styles.css
+++ b/css/styles.css
@@ -15,14 +15,16 @@ body {
   margin: 0;
 }
 
-img {
+/* Navigation  */
+
+.logo-img img{
   height:45px;
   width: 45px;
   padding: 3px;
   position: relative;
 }
 
-img:hover {
+.logo-img img:hover {
   animation: cupcake .5s ease-in-out;
   cursor: pointer;
 }
@@ -116,6 +118,200 @@ img:hover {
  }
 }
 
+/* Shopping Page */
+
+section {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.btn {
+    text-align: center;
+    vertical-align: middle;
+    padding: .67em .67em;
+    cursor: pointer;
+}
+
+h1, h2 {
+  font-size: 2.2em;
+  text-align: center;
+  font-family: 'Caveat', cursive;
+  color: purple;
+  background-color: white;
+  border-radius: 5px;
+  border: 1px solid purple;
+}
+
+.shop-bg {
+  background-image: none;
+  background-color: pink;
+}
+
+.shop-items {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.shop-item {
+  margin: 30px;
+}
+
+.shop-item-name {
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.5em;
+  color: #333;
+  margin-bottom: 15px;
+}
+
+.shop-item-image {
+  height: 200px;
+  width: 200px;
+  border-radius: 10px;
+  border: 2px solid purple;
+}
+
+.shop-item-details {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 0;
+}
+
+.shop-item-price {
+  align-items: flex-start;
+  font-size: 1.5em;
+}
+
+.add-to-cart-button {
+  border-radius: 5px;
+  border: none;
+  background-color: purple;
+  color: white;
+  font-size: 1em;
+}
+
+.add-to-cart-button:hover {
+  background-color: rgba(181, 81, 255, 0.4);
+  cursor: pointer;
+}
+
+.cart-header {
+  font-weight: bold;
+  font-size: 1.25em;
+}
+
+.cart-column {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid purple;
+  margin-right: 1.5em;
+  padding-bottom: 10px;
+  margin-top: 10px;
+}
+
+.cart-row {
+  display: flex;
+}
+
+.cart-item {
+  width: 45%;
+}
+
+.cart-price {
+  width: 20%;
+  font-size: 1.2em;
+  color: #333;
+}
+
+.cart-quantity {
+  width: 35%;
+}
+
+.cart-item-title {
+  color: #333;
+  margin-left: .5em;
+  font-size: 1.2em;
+}
+
+.cart-item-image {
+  width: 75px;
+  height: auto;
+  border-radius: 10px;
+}
+
+.btn-danger {
+  color: white;
+  background-color: #EB5757;
+  border: none;
+  border-radius: .3em;
+  font-weight: bold;
+}
+
+.btn-danger:hover {
+  background-color: #CC4C4C;
+  cursor: pointer;
+}
+
+.cart-quantity-input {
+  height: 34px;
+  width: 50px;
+  border-radius: 5px;
+  border: 1px solid purple;
+  color: #333;
+  padding: 0;
+  text-align: center;
+  font-size: 1.2em;
+  margin-right: 25px;
+}
+
+.cart-row:last-child {
+  border-bottom: 1px solid purple;
+}
+
+.cart-row:last-child .cart-column {
+  border: none;
+}
+
+.cart-total {
+  text-align: end;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+.cart-total-title {
+  font-weight: bold;
+  font-size: 1.5em;
+  color: black;
+  margin-right: 20px;
+}
+
+.cart-total-price {
+  color: #333;
+  font-size: 1.1em;
+}
+
+.btn-purchase {
+  display: block;
+  margin: 40px auto 80px auto;
+  font-size: 1.75em;
+  background-color: purple;
+  font-family: 'caveat', cursive;
+  color: white;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+.btn-purchase:hover {
+  background-color: white;
+  color: purple;
+
+}
+
+/* Validation Form  */
 
 input {
   font-size: 1.3em;
