--- a/css/styles.css
+++ b/css/styles.css
@@ -6,18 +6,18 @@
 body {
   padding: 0;
   margin: 0;
-  background-color: brown;
+  background-color: #620A0F;
   font-size: 1.2rem;
   color: white;
   transition: background 1.2s ease;
   position: relative;
   font-family: 'Quattrocento', serif;
-  min-height: 100vh;
+  height: 100%;
 }
 
 .container {
   max-width: 1500px;
-  margin: 50px auto;
+  margin: auto;
   padding: 0 40px;
 }
 /* Navigation  */
@@ -168,6 +168,541 @@ body {
   bottom: 0;
 }
 
+
+/* Home Page */
+
+.home-page-bg {
+  font-family: 'Quattrocento', serif;
+  height: 100vh;
+  background-image: url('../img/bread.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.home-header {
+  font-size: .7em;
+}
+
+.home-header h1 {
+  text-align: center;
+  color: black;
+  padding: 20px;
+  margin-top: 20px;
+  margin-bottom: 0;
+  letter-spacing: 10px;
+  background-color: rgba(184, 168, 171, 0.7);
+  border-bottom: 2px solid black;
+  border-top: 2px solid black;
+}
+
+.home-header i {
+  padding: 10px;
+  color: rgb(126, 126, 131);
+}
+
+/* About Page */
+
+.cooper-bg {
+  height: 100%;
+  width: 100%;
+  background-color: #620A0F;
+  background-image: url('../img/cooper.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 0;
+  margin: 0;
+  background-blend-mode: soft-light;
+}
+
+.about-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about-text {
+  position: relative;
+  margin: 10px auto;
+  padding: 20px;
+  max-width: 1000px;
+  line-height: 1.8em;
+  animation: textIn 1.2s;
+}
+
+@keyframes textIn {
+  0% {opacity: 0; top: -800px;}
+  100% {opacity: 1; top: 0px;}
+}
+
+.about-images {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  animation: picsIn 1.4s;
+}
+
+@keyframes picsIn {
+  0% {opacity: 0; left: -800px;}
+  100% {opacity: 1; left: 0px;}
+}
+
+.about-images img {
+  width: 100%;
+  height: auto;
+}
+
+/* Shopping Page */
+
+.shop-bg {
+  background-image: url('../img/cake-slice.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 0;
+  margin: 15px auto;
+}
+
+.shop-container {
+  background-color: rgba(215, 221, 236, 0.6);
+  padding: 15px;
+  color: #333;
+}
+
+.shopping-title {
+  position: relative;
+  padding: 15px;
+  margin: 15px;
+  text-align: center;
+  letter-spacing: 5px;
+  border-bottom: 2px solid #333;
+  animation: titleIn 1.3s;
+}
+
+@keyframes titleIn {
+  0% {opacity: 0; left: -800px;}
+  100% {opacity: 1; left: 0px;}
+}
+
+.cart-title {
+  font-size: 2em;
+  text-align: center;
+  color: white;
+  background-color: #333;
+  border-radius: 5px;
+  letter-spacing: 5px;
+}
+
+.shop-items {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  animation: shopIn 1.3s;
+}
+
+@keyframes shopIn {
+  0% {opacity: 0; right: -800px;}
+  100% {opacity: 1; right: 0px;}
+}
+
+.shop-item {
+  padding: 30px;
+  margin: 30px;
+}
+
+.shop-item-name {
+  border-radius: 5px;
+  border: 1px solid #333;
+  background: #333;
+  color: white;
+  box-shadow: 1px 1px 1px #333;
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-size: 1.5em;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+
+.shop-item-image {
+  height: 200px;
+  width: 200px;
+  border-radius: 10px;
+  border: 2px solid #333;
+  box-shadow: 10px 10px 8px #888888;
+}
+
+.shop-item-details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 0;
+}
+
+.shop-item-price {
+  align-items: flex-start;
+  font-size: 1.5em;
+}
+
+.add-to-cart-button {
+  border-radius: 5px;
+  border: 1px solid #333;
+  background: #620A0F;
+  color: white;
+  box-shadow: inset 0 1px 0 brown;
+  padding: .5em;
+  font-size: 1em;
+  transition: .2s;
+  cursor: pointer;
+}
+
+.add-to-cart-button:hover {
+  border: 1px #333 solid;
+  box-shadow: 0 1px 1px brown, inset 0 1px 0 #333;
+  background: #a3141b;
+}
+
+.cart-header {
+  font-weight: bold;
+  font-size: 1.25em;
+}
+
+.cart-column {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #333;
+  margin-right: 1.5em;
+  padding-bottom: 10px;
+  margin-top: 10px;
+}
+
+.cart-row {
+  display: flex;
+}
+
+.cart-item {
+  width: 45%;
+}
+
+.cart-price {
+  width: 20%;
+  font-size: 1.2em;
+}
+
+.cart-quantity {
+  width: 35%;
+}
+
+.cart-item-title {
+  margin-left: .5em;
+  font-size: 1.2em;
+}
+
+.cart-item-image {
+  width: 75px;
+  height: auto;
+  border-radius: 10px;
+}
+
+.btn-danger {
+  color: white;
+  background-color: #EB5757;
+  border: none;
+  border-radius: .3em;
+  font-weight: bold;
+}
+
+.btn-danger:hover {
+  background-color: #CC4C4C;
+  cursor: pointer;
+}
+
+.cart-quantity-input {
+  height: 34px;
+  width: 50px;
+  border-radius: 5px;
+  border: 1px solid #333;
+  color: #333;
+  padding: 0;
+  text-align: center;
+  font-size: 1.2em;
+  margin-right: 25px;
+}
+
+.cart-row:last-child {
+  border-bottom: 1px solid #333;
+}
+
+.cart-row:last-child .cart-column {
+  border: none;
+}
+
+.cart-total {
+  text-align: end;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+.cart-total-title {
+  font-weight: bold;
+  font-size: 1.5em;
+  margin-right: 20px;
+}
+
+.cart-total-price {
+  font-size: 1.1em;
+}
+
+.btn-purchase {
+  border-radius: 5px;
+  border: 1px solid #333;
+  background: #C4C4C4;
+  color: #333;
+  box-shadow: 2px 2px 1px 1px gray;
+  padding: .2em;
+  font-size: 1em;
+  transition: .2s;
+  cursor: pointer;
+  display: block;
+  margin: 40px auto 80px auto;
+  font-size: 1.75em;
+}
+
+.btn-purchase:hover {
+  border: 1px #C4C4C4 solid;
+  box-shadow: 1px 1px 1px #EAEAEA, 1px 1px 1px white;
+  color: green;
+}
+
+/* Sign Up Page  */
+
+.sign-up-bg {
+  height: 100vh;
+  background-image: url('../img/lab.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.sign-up-main-container {
+  padding: 30px;
+}
+
+.sign-up-info-container {
+  position: relative;
+  background-color: rgba(51, 51, 51, .8);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 200px;
+  width: 400px;
+  border: 2px solid #333;
+  border-radius: 15px;
+  margin: 0 auto;
+  animation: infoIn 1.2s;
+}
+
+@keyframes infoIn {
+  0% {opacity: 0; top: -800px;}
+  100% {opacity: 1; top: 0px;}
+}
+
+.info-form-text {
+  text-align: center;
+  font-size: 1.2em;
+}
+
+.sign-up-form-container {
+  position: relative;
+  background-color: rgba(51, 51, 51, .8);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 400px;
+  width: 400px;
+  border: 2px solid white;
+  border-radius: 15px;
+  margin: 0 auto;
+  animation: formIn 1.2s;
+}
+
+@keyframes formIn {
+  0% {opacity: 0; bottom: -800px;}
+  100% {opacity: 1; bottom: 0px;}
+}
+
+.form-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.sign-up-text {
+  font-family: 'Quattrocento', serif;
+  color: white;
+  transition: opacity 1.2s ease;
+  font-weight: bold;
+  text-align: center;
+  line-height: 1.5em;
+}
+
+.sign-up-btn {
+  margin-top: 15px;
+  padding: 10px;
+  text-align: center;
+  font-size: 1em;
+  letter-spacing: 2px;
+  border-radius: 5px;
+  border: 1px solid #3079ED;
+  background: #4C8FFB;
+  color: white;
+  box-shadow: inset 0 1px 0 #80B0FB;
+  transition: .2s;
+  cursor: pointer;
+}
+
+.sign-up-btn:hover {
+  border: 1px #2F5BB7 solid;
+  box-shadow: 0 1px 1px #EAEAEA, inset 0 1px 0 #5A94F1;
+  background: #3F83F1;
+}
+
+.form-text {
+  margin-top: 0;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.sign-up-alert {
+  font-size: 1.4em;
+  position: relative;
+  background-color: rgba(98, 10, 15, .8);
+  border: 1px solid black;
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  animation: warning .5s;
+  margin: 15px;
+}
+
+@keyframes warning {
+  0% {left: 1000px}
+  100% {left: 0}
+}
+
+.form-inputs {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+input {
+  font-size: 1.3em;
+}
+
+.name-field,
+.email-field,
+.password-field,
+.finish-field {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  background: white;
+  color: #333;
+  height: 50px;
+  padding: 10px;
+  transition: all .5s ease;
+  box-shadow: 2px 2px 2px #333;
+}
+
+.name-field i,
+.email-field i,
+.password-field i,
+.finish-field i {
+  padding: 10px;
+  cursor: pointer;
+  font-size: 1.3em;
+  color: rgb(126, 126, 131);
+}
+
+.name-field input,
+.email-field input,
+.password-field input {
+  color: rgb(126, 126, 131);
+  background: none;
+  border: none;
+  outline: none;
+  flex: 1;
+  height: 100%;
+}
+
+div.inactive {
+  opacity: 0;
+  pointer-events: none;
+}
+
+div.active {
+  opacity: 1;
+  pointer-events: all;
+  }
+
+input:required {
+  box-shadow: none;
+}
+
+input:invalid {
+  box-shadow: none;
+}
+
+.fa-check-circle {
+  color: rgb(53, 170, 112)!important;
+}
+
+.sign-up-success {
+  transition: .2s;
+  background-color: green;
+  color: white;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+  position: relative;
+  font-size: 1.4em;
+  animation: success;
+}
+
+@keyframes success {
+  0% {left: 1000px}
+  100% {left: 0}
+}
+
+@keyframes shakeMe {
+  0% {
+      transform: rotate(0deg);
+  }
+  50% {
+      transform: rotate(10deg);
+  }
+  100% {
+      transform: rotate(0deg);
+  }
+}
+
+
+/* MEDIA QUERIES */
+
 @media(min-width: 768px) {
   .footer-element {
     margin: 10px;
@@ -212,382 +747,41 @@ body {
     font-size: 3em;
   }
 
-}
-
-
-/* Home Page */
-
-.home-page-container {
-  font-family: 'Quattrocento', serif;
-  height: 100vh;
-  background-image: url('../img/bread.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.home-header {
-  font-size: .7em;
-}
-
-.home-header h1 {
-  text-align: center;
-  color: black;
-  padding: 20px;
-  margin-top: 20px;
-  letter-spacing: 10px;
-  background-color: rgba(184, 168, 171, 0.7);
-  border-bottom: 2px solid black;
-  border-top: 2px solid black;
-}
-
-.home-header i {
-  padding: 10px;
-  color: rgb(126, 126, 131);
-}
-
-/* Shopping Page */
-
-
-.shopping-title,
-.cart-title {
-  font-size: 2.2em;
-  text-align: center;
-  font-family: 'Caveat', cursive;
-  color: purple;
-  background-color: white;
-  border-radius: 5px;
-  border: 1px solid purple;
-}
-
-.shop-bg {
-  background-image: none;
-  background-color: pink;
-}
-
-.shop-items {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.shop-item {
-  margin: 30px;
-}
-
-.shop-item-name {
-  display: block;
-  width: 100%;
-  text-align: center;
-  font-weight: bold;
-  font-size: 1.5em;
-  color: #333;
-  margin-bottom: 15px;
-}
-
-.shop-item-image {
-  height: 200px;
-  width: 200px;
-  border-radius: 10px;
-  border: 2px solid purple;
-}
-
-.shop-item-details {
-  display: flex;
-  justify-content: space-between;
-  padding: 5px 0;
-}
-
-.shop-item-price {
-  align-items: flex-start;
-  font-size: 1.5em;
-}
-
-.add-to-cart-button {
-  border-radius: 5px;
-  border: none;
-  background-color: purple;
-  color: white;
-  padding: .5em;
-  font-size: 1em;
-}
-
-.add-to-cart-button:hover {
-  background-color: rgba(181, 81, 255, 0.4);
-  cursor: pointer;
-}
-
-.cart-header {
-  font-weight: bold;
-  font-size: 1.25em;
-}
-
-.cart-column {
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid purple;
-  margin-right: 1.5em;
-  padding-bottom: 10px;
-  margin-top: 10px;
-}
-
-.cart-row {
-  display: flex;
-}
-
-.cart-item {
-  width: 45%;
-}
-
-.cart-price {
-  width: 20%;
-  font-size: 1.2em;
-  color: #333;
-}
-
-.cart-quantity {
-  width: 35%;
-}
-
-.cart-item-title {
-  color: #333;
-  margin-left: .5em;
-  font-size: 1.2em;
-}
-
-.cart-item-image {
-  width: 75px;
-  height: auto;
-  border-radius: 10px;
-}
-
-.btn-danger {
-  color: white;
-  background-color: #EB5757;
-  border: none;
-  border-radius: .3em;
-  font-weight: bold;
-}
-
-.btn-danger:hover {
-  background-color: #CC4C4C;
-  cursor: pointer;
-}
-
-.cart-quantity-input {
-  height: 34px;
-  width: 50px;
-  border-radius: 5px;
-  border: 1px solid purple;
-  color: #333;
-  padding: 0;
-  text-align: center;
-  font-size: 1.2em;
-  margin-right: 25px;
-}
-
-.cart-row:last-child {
-  border-bottom: 1px solid purple;
-}
-
-.cart-row:last-child .cart-column {
-  border: none;
-}
-
-.cart-total {
-  text-align: end;
-  margin-top: 10px;
-  margin-right: 10px;
-}
-
-.cart-total-title {
-  font-weight: bold;
-  font-size: 1.5em;
-  color: black;
-  margin-right: 20px;
-}
-
-.cart-total-price {
-  color: #333;
-  font-size: 1.1em;
-}
-
-.btn-purchase {
-  display: block;
-  margin: 40px auto 80px auto;
-  font-size: 1.75em;
-  background-color: purple;
-  font-family: 'caveat', cursive;
-  color: white;
-  cursor: pointer;
-  border-radius: 8px;
-}
-
-.btn-purchase:hover {
-  background-color: white;
-  color: purple;
-
-}
-
-/* Sign Up Page  */
-
-.dog-container {
-  background-color: beige;
-  color: #333;
-  font-size: 1.3em;
-  border: 2px solid #333;
-  position: relative;
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
-  margin: 0 auto;
-  height: 300px;
-  max-width: 500px;
-}
-
-.dog-container img {
-  height: auto;
-  width: 200px;
-}
-
-.dog-content {
-  margin: auto 0;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.dog-content p {
-  margin: 0;
-}
-
-.dog-content button {
-  margin-top: 15px;
-  padding: 10px;
-  text-align: center;
-  border: none;
-  border-radius: 10px;
-  font-size: .6em;
-  color: white;
-  background-color: green;
-  letter-spacing: 2px;
-  cursor: pointer;
-}
-
-.sign-up-text {
-  display: none;
-  font-family: 'Quattrocento', serif;
-  color: white;
-  transition: opacity 1.2s ease;
-  font-weight: bold;
-  text-align: center;
-  margin-top: 200px;
-}
-
-.sign-up-header {
-  font-size: 1.5em;
-}
-
-.sign-up-sub {
-  font-size: 1.4em;
-}
-
-.form {
-  display: none;
-  flex-direction: column;
-  position: relative;
-  justify-content: space-around;
-  align-items: center;
-  height: 300px;
-}
-
-input {
-  font-size: 1.3em;
-}
-
-.name-field,
-.email-field,
-.password-field,
-.finish-field {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  background: white;
-  height: 50px;
-  width: 400px;
-  padding: 10px;
-  transition: all .5s ease;
-}
-
-.name-field i,
-.email-field i,
-.password-field i,
-.finish-field i {
-    padding: 10px;
-    cursor: pointer;
-    font-size: 1.3em;
-    color: rgb(126, 126, 131);
-}
-
-.name-field input,
-.email-field input,
-.password-field input {
-    color: rgb(126, 126, 131);
-    background: none;
-    border: none;
-    outline: none;
-    flex: 1;
-    height: 100%;
-}
-
-div.inactive {
-    opacity: 0;
-    pointer-events: none;
-}
-
-div.active {
-    opacity: 1;
-    pointer-events: all;
+  .about-images {
+    overflow: hidden;
+    flex-direction: row;
+    height: auto;
+    width: 100%;
+    max-height: 600px;
+    justify-content: center;
   }
 
-input:required {
-    box-shadow: none;
+  .about-images img {
+    width: 40%;
+  }
+
+  .sign-up-main-container {
+    padding-top: 100px;
+  }
+
+  .sign-up-form-container {
+    top: 10%;
+    width: 600px;
+    height: 400px;
+  }
+
+  .form-text {
+    font-size: 2em;
+  }
+
 }
 
-input:invalid {
-    box-shadow: none;
-}
+@media(min-width: 1080px) {
+  .footer {
+    font-size: 1em;
+  }
 
-.fa-check-circle {
-    color: rgb(53, 170, 112)!important;
-}
-
-@keyframes shakeMe {
-    0% {
-        transform: rotate(0deg);
-    }
-    50% {
-        transform: rotate(10deg);
-    }
-    100% {
-        transform: rotate(0deg);
-    }
-}
-
-.sign-up-images img {
-  height: 200px;
-  width: 200px;
-  margin: 5px;
-  padding: 0;
-  border-radius: 5px;
-}
-
-.sign-up-images {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
+  .about-text {
+    font-size: 1.3em;
+  }
 }
